fix: z-index hover bug

--- a/django_smg/frontend/src/components/gallery/tilegrid/tilegrid.module.css
+++ b/django_smg/frontend/src/components/gallery/tilegrid/tilegrid.module.css
@@ -22,6 +22,7 @@
 .tg_title {
   margin: 0;
   position: relative;
+  z-index: 10;
   top: min(10vw, 5.9rem);
   font-size: min(6vw, 3.5rem);
   color: black;
